# sails-program-verifier

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-verifier  Makefile  README.md  build.sh  openapi.json
.github/workflows/: CI.yml  docker-release.yml  update-app-remote-vm.yaml
migrations/2024-12-04-164352_init/: up.sql
migrations/2024-12-13-144849_init/: down.sql  up.sql
migrations/2025-04-23-091851_base_path/: down.sql  up.sql
migrations/2025-04-24-083434_init/: down.sql  up.sql
migrations/2025-07-28-142123_base_path/: down.sql  up.sql
src/: consts.rs  lib.rs  main.rs  util.rs
src/db/: conn.rs  mod.rs  model.rs  schema.rs
src/processor/: builder.rs  docker.rs  mod.rs  network_client.rs
src/server/: mod.rs  types.rs
src/server/routes/: code.rs  idl.rs  mod.rs  verify.rs  version.rs
test-program/: Cargo.toml
test-program/src/: lib.rs
tests/: openapi_spec.rs
tests/snapshots/: openapi_spec__openapi_specification.snap
