[package]
name = "sails-program-verifier"
version = "0.8.1"
authors = ["Gear Technologies"]
edition = "2021"
license = "GPL-3.0"
homepage = "https://gear-tech.io"
repository = "https://github.com/gear-tech/sails-program-verifier"
description = "Service for verifying Sails programs"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
axum = "0.7.7"
blake2 = "0.10.6"
bollard = "0.19.1"
diesel = { version = "2.2.12", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
env_logger = "0.11.8"
futures = "0.3.31"
gsdk = "1.8.1"
hex = "0.4.3"
http = "1.3.1"
log = "0.4"
r2d2 = "0.8.10"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.1.0", features = ["axum"] }

[dev-dependencies]
insta = "1.43"
